--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -29,11 +29,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [[ $RUNNER_OS != "Windows" ]]; then
+          if [ "${{ runner.os }}" != "Windows" ]; then
             pip install -r requirements.txt
           else
-            pip install $(grep -v 'memray' requirements.txt)
+            pip install $(Get-Content requirements.txt | Where-Object {$_ -notmatch 'memray'})
           fi
+        shell: bash
 
       - name: Run tests with coverage check
         run: |
