--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -30,9 +30,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ "${{ runner.os }}" != "Windows" ]; then
+            # Install all dependencies on Linux/MacOS
             pip install -r requirements.txt
           else
-            pip install $(Get-Content requirements.txt | Where-Object {$_ -notmatch 'memray'})
+            # Install dependencies excluding 'memray' on Windows
+            pip install -r <(findstr /V "memray" requirements.txt)
           fi
         shell: bash
 
