--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -12,46 +12,8 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - name: Check out the code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ "${{ runner.os }}" != "Windows" ]; then
-            # Install all dependencies on Linux/MacOS
-            pip install -r requirements.txt
-          else
-            # Install dependencies excluding 'memray' on Windows
-            pip install -r <(findstr /V "memray" requirements.txt)
-          fi
-        shell: bash
-
-      - name: Run tests with coverage check
-        run: |
-          pytest --cov --cov-report=html --cov-report=xml --cov-fail-under=70
-
-      - name: Upload HTML coverage report as artifact
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: html-coverage-report-${{ matrix.os }}
-          path: htmlcov/
-
-  publish-coverage:
-    needs: test
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out the code
         uses: actions/checkout@v3
@@ -66,11 +28,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests to generate coverage report
+      - name: Run tests with coverage check
         run: |
-          pytest --cov --cov-report=xml
+          pytest --cov --cov-report=html --cov-report=xml --cov-fail-under=70
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload HTML coverage report as artifact
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-coverage-report
+          path: htmlcov/
